Fix styling of newletter signup on mobile

--- a/src/components/Subscribe.scss
+++ b/src/components/Subscribe.scss
@@ -3,8 +3,6 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  margin-right: -15px;
-  margin-left: -15px;
   background: #f1f2f5;
   color: #2a2a2a;
 
